# horoscope

./: pyproject.toml
horoscope/horoscope/: settings.py  urls.py
horoscope/zodiac/: admin.py  models.py  urls.py  views.py
horoscope/zodiac/migrations/: 0001_initial.py  0002_signhoroscope_slug_zodiacsigns_slug.py  0003_zodiacsigns_sign_image.py  0004_rename_zodiacsigns_zodiacsign.py  0005_zodiacsign_sign_view.py  0006_rename_sign_signhoroscope_sign_id.py
horoscope/zodiac/templates/: home.html
horoscope/zodiac/templates/zodiac/: base.html  index.html  sign_horoscope.html
